chore: Add new files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /Jira via Python - DWC Roadmap Adherence Report (002).ipynb
 /Langflow
 /quivr
+simlarity/test_similar_product_features.csv
+simlarity/SAP Analytics Cloud & SAP Digital Boardroom.csv
+simlarity/merged_data.csv
+simlarity/full_similar_product_features.csv
+simlarity/.env
