Move Frequently used scripts to notebook

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ simlarity/SAP Analytics Cloud & SAP Digital Boardroom.csv
 simlarity/merged_data.csv
 simlarity/full_similar_product_features.csv
 simlarity/.env
+Copy of Improvements_and_Votes(18-06-2024, 13_35).csv
+IRVotes(ETL)
+simlarity/search.csv
